// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post is not null renders correctly with post 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          CARE STEP
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        Roge is well behaved
      </Text>
      <Text>
        Center content
      </Text>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "mockpicture.jpeg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "backgroundColor": "rgb(155, 155, 152)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Robert Eldredge
            </Text>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#B4B6BA",
                      "fontSize": 12,
                    },
                  ]
                }
                testID="Text"
              >
                May 18 @ 5:48 PM
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#3CC8E6",
                      "fontSize": 12,
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                Open Post
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingTop": 10,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                  "paddingBottom": 20,
                },
              ]
            }
          >
            cool mock post
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Post is not null renders correctly with post with image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          CARE STEP
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        Roge is well behaved
      </Text>
      <Text>
        Center content
      </Text>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "mockpicture.jpeg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "backgroundColor": "rgb(155, 155, 152)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Robert Eldredge
            </Text>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#B4B6BA",
                      "fontSize": 12,
                    },
                  ]
                }
                testID="Text"
              >
                May 18 @ 5:48 PM
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#3CC8E6",
                      "fontSize": 12,
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                Open Post
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingTop": 10,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                  "paddingBottom": 20,
                },
              ]
            }
          >
            cool mock post
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "mockImage.jpeg",
            }
          }
          style={
            Object {
              "aspectRatio": 2,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Post is not null renders with an input 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          CARE STEP
        </Text>
      </View>
      <View>
        Input
      </View>
      <Text>
        Center content
      </Text>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flexDirection": "row",
              },
            ]
          }
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "mockpicture.jpeg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "backgroundColor": "rgb(155, 155, 152)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Robert Eldredge
            </Text>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#B4B6BA",
                      "fontSize": 12,
                    },
                  ]
                }
                testID="Text"
              >
                May 18 @ 5:48 PM
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#3CC8E6",
                      "fontSize": 12,
                      "paddingLeft": 10,
                    },
                  ]
                }
              >
                Open Post
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingTop": 10,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                  "paddingBottom": 20,
                },
              ]
            }
          >
            cool mock post
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "mockImage.jpeg",
            }
          }
          style={
            Object {
              "aspectRatio": 2,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`markdown is empty string renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 13,
          },
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        height={24}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B4B6BA",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "paddingLeft": 4,
              },
              undefined,
            ],
          ]
        }
      >
        STEP OF FAITH
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
          },
        ]
      }
    >
      Roge is well behaved
    </Text>
    <Text>
      Center content
    </Text>
    <View
      style={
        Object {
          "paddingHorizontal": 32,
          "paddingTop": 26,
        }
      }
    />
  </View>
</View>
`;

exports[`markdown is not null renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        Roge is well behaved
      </Text>
      <Text>
        Center content
      </Text>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              <Text>
                ROBERT ROBERT ROBERT
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`markdown is not null renders correctly on android 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 32,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        Roge is well behaved
      </Text>
      <Text>
        Center content
      </Text>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              <Text>
                ROBERT ROBERT ROBERT
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`markdown is not null renders correctly on android with bottom button props 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 90,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        Roge is well behaved
      </Text>
      <Text>
        Center content
      </Text>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              <Text>
                ROBERT ROBERT ROBERT
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          BOTTOM BUTTON PROPS
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`markdown is not null renders correctly with bottom button props 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        Roge is well behaved
      </Text>
      <Text>
        Center content
      </Text>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              <Text>
                ROBERT ROBERT ROBERT
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          BOTTOM BUTTON PROPS
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`markdown is null bottomButtonProps are not null renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 13,
          },
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        height={24}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B4B6BA",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "paddingLeft": 4,
              },
              undefined,
            ],
          ]
        }
      >
        STEP OF FAITH
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
          },
        ]
      }
    >
      Roge is well behaved
    </Text>
    <Text>
      Center content
    </Text>
    <View
      style={
        Object {
          "paddingHorizontal": 32,
          "paddingTop": 26,
        }
      }
    />
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          BOTTOM BUTTON PROPS
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`markdown is null bottomButtonProps are null renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 13,
          },
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        height={24}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B4B6BA",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "paddingLeft": 4,
              },
              undefined,
            ],
          ]
        }
      >
        STEP OF FAITH
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
          },
        ]
      }
    >
      Roge is well behaved
    </Text>
    <Text>
      Center content
    </Text>
    <View
      style={
        Object {
          "paddingHorizontal": 32,
          "paddingTop": 26,
        }
      }
    />
  </View>
</View>
`;

exports[`markdown with <<name>> to change renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="BackButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Array [
                  Object {
                    "alignItems": "flex-start",
                    "alignSelf": "flex-start",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            <SvgMock
              color="#B4B6BA"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 32,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "paddingLeft": 4,
                },
                undefined,
              ],
            ]
          }
        >
          STEP OF FAITH
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 32,
              "fontWeight": "300",
              "lineHeight": 38,
              "marginHorizontal": 32,
              "marginVertical": 16,
            },
          ]
        }
      >
        Roge is well behaved
      </Text>
      <Text>
        Center content
      </Text>
      <View
        style={
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              <Text>
                Christian Christian Christian
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders with hideBackButton renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 5,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View />
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "paddingHorizontal": 32,
            "paddingTop": 13,
          },
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        height={24}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#B4B6BA",
                "fontSize": 16,
                "fontWeight": "bold",
                "letterSpacing": 1,
                "paddingLeft": 4,
              },
              undefined,
            ],
          ]
        }
      >
        STEP OF FAITH
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontWeight": "300",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
          },
        ]
      }
    >
      Roge is well behaved
    </Text>
    <Text>
      Center content
    </Text>
    <View
      style={
        Object {
          "paddingHorizontal": 32,
          "paddingTop": 26,
        }
      }
    />
  </View>
</View>
`;
